modified:   caffe-vis.ipynb

--- a/caffe-vis.ipynb
+++ b/caffe-vis.ipynb
@@ -57,6 +57,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vis_square(data):\n",
+    "\n",
+    "    # 输入的数据为一个ndarray，尺寸可以为(n, height, width)或者是 (n, height, width, 3)\n",
+    "    # 前者即为n个灰度图像的数据，后者为n个rgb图像的数据\n",
+    "    # 在一个sqrt(n) by sqrt(n)的格子中，显示每一幅图像\n",
+    "\n",
+    "    # 对输入的图像进行normlization\n",
+    "    data = (data - data.min()) / (data.max() - data.min())\n",
+    "\n",
+    "    # 强制性地使输入的图像个数为平方数，不足平方数时，手动添加几幅\n",
+    "    n = int(np.ceil(np.sqrt(data.shape[0])))\n",
+    "    # 每幅小图像之间加入小空隙\n",
+    "    padding = (((0, n ** 2 - data.shape[0]),\n",
+    "               (0, 1), (0, 1))                 # add some space between filters\n",
+    "                           + ((0, 0),) * (data.ndim - 3))  # don't pad the last dimension (if there is one)\n",
+    "       data = np.pad(data, padding, mode='constant', constant_values=1)  # pad with ones (white)   \n",
+    "\n",
+    "        # 将所有输入的data图像平复在一个ndarray-data中（tile the filters into an image）\n",
+    "        data = data.reshape((n, n) + data.shape[1:]).transpose((0, 2, 1, 3) + tuple(range(4, data.ndim + 1)))\n",
+    "        # data的一个小例子,e.g., (3,120,120)\n",
+    "        # 即，这里的data是一个2d 或者 3d 的ndarray\n",
+    "        data = data.reshape((n * data.shape[1], n * data.shape[3]) + data.shape[4:])\n",
+    "\n",
+    "        # 显示data所对应的图像\n",
+    "        plt.imshow(data); plt.axis('off')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -367,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
